backend first commit

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-compte: hamza.missaoui47@gmail.com >>
-
-MONGODB_URL=mongodb+srv://root:shadowfight@cluster0.it38e.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://root:hamzault47.xxx@cluster0.feqvf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT = 5000
