fix bookRouter to create first book on mongodb

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -21,6 +22,6 @@
   },
   "devDependencies": {
     "@angular/cli": "^12.2.11",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.15"
   }
 }
